--- a/fluentd/container-es/fluentd.conf
+++ b/fluentd/container-es/fluentd.conf
@@ -13,7 +13,7 @@
     port 9200
     user username
     password pass
-    
+    localtime
     logstash_format true
     logstash_prefix "fluentd-test"
     logstash_dateformat %Y-%m
